@@ -814,6 +814,17 @@ name|core
 operator|.
 name|getCoreDescriptor
 argument_list|()
+argument_list|,
+name|core
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|getUpdateLog
+argument_list|()
+operator|.
+name|getNumRecordsToKeep
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1013,6 +1024,9 @@ name|leaderProps
 parameter_list|,
 name|CoreDescriptor
 name|cd
+parameter_list|,
+name|int
+name|nUpdates
 parameter_list|)
 block|{
 comment|// sync everyone else
@@ -1127,6 +1141,8 @@ name|node
 operator|.
 name|getCoreName
 argument_list|()
+argument_list|,
+name|nUpdates
 argument_list|)
 expr_stmt|;
 block|}
@@ -1405,6 +1421,9 @@ name|leaderUrl
 parameter_list|,
 name|String
 name|coreName
+parameter_list|,
+name|int
+name|nUpdates
 parameter_list|)
 block|{
 name|ShardCoreRequest
@@ -1493,7 +1512,7 @@ name|Integer
 operator|.
 name|toString
 argument_list|(
-literal|100
+name|nUpdates
 argument_list|)
 argument_list|)
 expr_stmt|;
